Add gets3, heads3, reads3, puts3 methods.